Added Worker API

--- a/src/Tempus.Proxy/appsettings.json
+++ b/src/Tempus.Proxy/appsettings.json
@@ -8,10 +8,16 @@
   "AllowedHosts": "*",
   "ReverseProxy": {
     "Routes": {
-      "route1": {
+      "customersRoute": {
         "ClusterId": "customerCluster",
         "Match": {
           "Path": "/api/customers/{**catch-all}"
+        }
+      },
+      "workersRoute": {
+        "ClusterId": "workerCluster",
+        "Match": {
+          "Path": "/api/workers/{**catch-all}"
         }
       }
     },
@@ -20,6 +26,13 @@
         "Destinations": {
           "cluster/customers": {
             "Address": "http://localhost:5011/"
+          }
+        }
+      },
+      "workerCluster": {
+        "Destinations": {
+          "cluster/worker": {
+            "Address": "http://localhost:5012/"
           }
         }
       }
