--- a/src/Tempus.Workers/Properties/launchSettings.json
+++ b/src/Tempus.Workers/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
@@ -11,13 +11,11 @@
   "profiles": {
     "Tempus.Workers": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7216;http://localhost:5141",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:5012",
+      "dotnetRunMessages": true
     },
     "IIS Express": {
       "commandName": "IISExpress",
