Added WorkType API

--- a/src/Tempus.Proxy/appsettings.json
+++ b/src/Tempus.Proxy/appsettings.json
@@ -19,6 +19,12 @@
         "Match": {
           "Path": "/api/workers/{**catch-all}"
         }
+      },
+      "workTypeRoute": {
+        "ClusterId": "workTypeCluster",
+        "Match": {
+          "Path": "/api/worktypes/{**catch-all}"
+        }
       }
     },
     "Clusters": {
@@ -33,6 +39,13 @@
         "Destinations": {
           "cluster/worker": {
             "Address": "http://localhost:5012/"
+          }
+        }
+      },
+      "workTypeCluster": {
+        "Destinations": {
+          "cluster/workType": {
+            "Address": "http://localhost:5013/"
           }
         }
       }
