--- a/src/Tempus.Proxy/appsettings.json
+++ b/src/Tempus.Proxy/appsettings.json
@@ -25,6 +25,12 @@
         "Match": {
           "Path": "/api/worktypes/{**catch-all}"
         }
+      },
+      "timeBillingRoute": {
+        "ClusterId": "timeBillingCluster",
+        "Match": {
+          "Path": "/api/timebills/{**catch-all}"
+        }
       }
     },
     "Clusters": {
@@ -46,6 +52,13 @@
         "Destinations": {
           "cluster/workType": {
             "Address": "http://localhost:5013/"
+          }
+        }
+      },
+      "timeBillingCluster": {
+        "Destinations": {
+          "cluster/timeBilling": {
+            "Address": "http://localhost:5014/"
           }
         }
       }
