--- a/src/Tempus.TimeBilling/appsettings.Development.json
+++ b/src/Tempus.TimeBilling/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "TimeBillingDb": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=TempusTimeBillingDb;Integrated Security=True;Connect Timeout=30;"
   }
 }
