--- a/src/Tempus.TimeBilling/Properties/launchSettings.json
+++ b/src/Tempus.TimeBilling/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
@@ -11,13 +11,11 @@
   "profiles": {
     "Tempus.TimeBilling": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7112;http://localhost:5125",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:5014",
+      "dotnetRunMessages": true
     },
     "IIS Express": {
       "commandName": "IISExpress",
