--- a/src/Tempus.Common/Tempus.Common.csproj
+++ b/src/Tempus.Common/Tempus.Common.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.5" />
   </ItemGroup>
   
 </Project>
