--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,5 +24,5 @@ jobs:
       working-directory: ./src
       run: dotnet build --no-restore
     - name: Test
-      working-directory: ./src
+      working-directory: ./src/tests
       run: dotnet test --no-build --verbosity normal
