Update with gci instead of ls (to prevent unix collision)

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,4 +26,4 @@ jobs:
 
     - name: Execute All Tests
       shell: pwsh
-      run: foreach ($test in (ls -Recurse ./src/tests/*.csproj | % FullName)) { dotnet test $($test) --no-build --verbosity normal }
+      run: foreach ($test in (gci -Recurse "./src/tests/*.csproj" | % FullName)) { dotnet test "$($test)" --no-build --verbosity normal }
