--- a/src/Tempus.Proxy/appsettings.json
+++ b/src/Tempus.Proxy/appsettings.json
@@ -2,7 +2,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information"
     }
   },
   "AllowedHosts": "*",
@@ -10,24 +10,28 @@
     "Routes": {
       "customersRoute": {
         "ClusterId": "customerCluster",
+        "CorsPolicy": "Default",
         "Match": {
           "Path": "/api/customers/{**catch-all}"
         }
       },
       "workersRoute": {
         "ClusterId": "workerCluster",
+        "CorsPolicy": "tempus",
         "Match": {
           "Path": "/api/workers/{**catch-all}"
         }
       },
       "workTypeRoute": {
         "ClusterId": "workTypeCluster",
+        "CorsPolicy": "Default",
         "Match": {
           "Path": "/api/worktypes/{**catch-all}"
         }
       },
       "timeBillingRoute": {
         "ClusterId": "timeBillingCluster",
+        "CorsPolicy": "Default",
         "Match": {
           "Path": "/api/timebills/{**catch-all}"
         }
