--- a/src/Tempus.App/package.json
+++ b/src/Tempus.App/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.0",
+    "axios": "^0.27.2",
     "vue": "^3.2.25",
     "vue-router": "^4.0.16"
   },
