--- a/src/Tempus.App/package.json
+++ b/src/Tempus.App/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.0",
+    "@vuelidate/core": "^2.0.0-alpha.41",
+    "@vuelidate/validators": "^2.0.0-alpha.29",
     "axios": "^0.27.2",
     "pinia": "^2.0.14",
     "vue": "^3.2.25",
