--- a/src/Tempus.App/package.json
+++ b/src/Tempus.App/package.json
@@ -15,10 +15,10 @@
     "@fortawesome/vue-fontawesome": "^3.0.0",
     "@vuelidate/core": "^2.0.0-alpha.41",
     "@vuelidate/validators": "^2.0.0-alpha.29",
-    "axios": "^0.27.2",
     "pinia": "^2.0.14",
     "vue": "^3.2.25",
-    "vue-router": "^4.0.16"
+    "vue-router": "^4.0.16",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
