Integrated with Tye

--- a/src/Tempus.Proxy/appsettings.json
+++ b/src/Tempus.Proxy/appsettings.json
@@ -10,7 +10,7 @@
     "Routes": {
       "customersRoute": {
         "ClusterId": "customerCluster",
-        "CorsPolicy": "Default",
+        "CorsPolicy": "tempus",
         "Match": {
           "Path": "/api/customers/{**catch-all}"
         }
@@ -24,14 +24,14 @@
       },
       "workTypeRoute": {
         "ClusterId": "workTypeCluster",
-        "CorsPolicy": "Default",
+        "CorsPolicy": "tempus",
         "Match": {
           "Path": "/api/worktypes/{**catch-all}"
         }
       },
       "timeBillingRoute": {
         "ClusterId": "timeBillingCluster",
-        "CorsPolicy": "Default",
+        "CorsPolicy": "tempus",
         "Match": {
           "Path": "/api/timebills/{**catch-all}"
         }
