--- a/src/Tempus.App/package.json
+++ b/src/Tempus.App/package.json
@@ -18,7 +18,8 @@
     "pinia": "^2.0.14",
     "vue": "^3.2.25",
     "vue-router": "^4.0.16",
-    "vue-toastification": "^2.0.0-rc.5"
+    "vue-toastification": "^2.0.0-rc.5",
+    "vue-universal-modal": "^1.1.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
